--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.1",
     "typescript": "4.9.3"
   }
 }
